# proxy

./: .gitignore  pyproject.toml
doc/: google_tags.txt  multi_socks5_http_config.json  socks5_config.json  socks5_tags_config.json  socks5_vmess_config.json  socks5_vmess_google_tags_config.json  vmessc_config.json
proxy/: __init__.py  __main__.py  struct.py
proxy/bak/: aiows.py
proxy/plugins/: aiows.py  http.py  socks5.py  tag.py  vmess.py  ws.py
proxy/vmessc/: dl.py  sub.py
