[project]
name = "proxy"
version = "0.1.0"
description = "Proxy tools."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
ws = [
    "websockets>=15.0.1",
]
vmessc = [
    "cryptography>=45.0.5",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
